--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
       <artifactId>spring-orm</artifactId>
       <version>5.3.26</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
